# equinox

./: CMakeLists.txt  LICENSE  README.md  config.h.in
src/: CMakeLists.txt  config.h  main.c  matbingen.c  matbingen.h  matrixlcr.h  mwm.c  mwm.h  parameters.h  pretreat.h
